--- a/html-templates/card-template.html
+++ b/html-templates/card-template.html
@@ -6,9 +6,7 @@
 
   <div class="card__details">
     <div class="card__detail-box">
-      <h6 class="card__detail card__detail--organic {%IS_ORGANIC%}">
-        Organic!
-      </h6>
+      <h6 class="card__detail card__detail--organic {%IS_ORGANIC%}">Organic!</h6>
     </div>
 
     <div class="card__detail-box">
