--- a/html-templates/product-template.html
+++ b/html-templates/product-template.html
@@ -29,14 +29,14 @@
       body {
         padding: 5rem 5rem 10rem;
         line-height: 1.7;
-        font-family: "Nunito Sans", sans-serif;
+        font-family: 'Nunito Sans', sans-serif;
         color: #555;
         min-height: 100vh;
         background: linear-gradient(to bottom right, #9be15d, #00e3ae);
       }
 
       h1 {
-        font-family: "Megrim", sans-serif;
+        font-family: 'Megrim', sans-serif;
         font-size: 6rem;
         color: white;
         transform: skewY(-5deg);
@@ -46,7 +46,7 @@
       }
 
       h1::before {
-        content: "";
+        content: '';
         display: block;
         height: 65%;
         width: 49%;
@@ -80,7 +80,7 @@
       }
 
       .product__hero::before {
-        content: "";
+        content: '';
         display: block;
         height: 100%;
         width: 100%;
@@ -195,7 +195,7 @@
       .product__name {
         background: linear-gradient(to bottom, #9be15d, #00e3ae);
         padding: 1rem;
-        font-family: "Megrim", sans-serif;
+        font-family: 'Megrim', sans-serif;
         font-size: 4rem;
         color: white;
         text-align: center;
@@ -271,33 +271,15 @@
           <span class="emoji-left">👈</span>Back
         </a>
         <div class="product__hero">
-          <span class="product__emoji product__emoji--1"
-            >{%PRODUCT_IMAGE%}</span
-          >
-          <span class="product__emoji product__emoji--2"
-            >{%PRODUCT_IMAGE%}</span
-          >
-          <span class="product__emoji product__emoji--3"
-            >{%PRODUCT_IMAGE%}</span
-          >
-          <span class="product__emoji product__emoji--4"
-            >{%PRODUCT_IMAGE%}</span
-          >
-          <span class="product__emoji product__emoji--5"
-            >{%PRODUCT_IMAGE%}</span
-          >
-          <span class="product__emoji product__emoji--6"
-            >{%PRODUCT_IMAGE%}</span
-          >
-          <span class="product__emoji product__emoji--7"
-            >{%PRODUCT_IMAGE%}</span
-          >
-          <span class="product__emoji product__emoji--8"
-            >{%PRODUCT_IMAGE%}</span
-          >
-          <span class="product__emoji product__emoji--9"
-            >{%PRODUCT_IMAGE%}</span
-          >
+          <span class="product__emoji product__emoji--1">{%PRODUCT_IMAGE%}</span>
+          <span class="product__emoji product__emoji--2">{%PRODUCT_IMAGE%}</span>
+          <span class="product__emoji product__emoji--3">{%PRODUCT_IMAGE%}</span>
+          <span class="product__emoji product__emoji--4">{%PRODUCT_IMAGE%}</span>
+          <span class="product__emoji product__emoji--5">{%PRODUCT_IMAGE%}</span>
+          <span class="product__emoji product__emoji--6">{%PRODUCT_IMAGE%}</span>
+          <span class="product__emoji product__emoji--7">{%PRODUCT_IMAGE%}</span>
+          <span class="product__emoji product__emoji--8">{%PRODUCT_IMAGE%}</span>
+          <span class="product__emoji product__emoji--9">{%PRODUCT_IMAGE%}</span>
         </div>
         <h2 class="product__name">{%PRODUCT_NAME%}</h2>
         <div class="product__details">
